--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="grid p-4 lg:p-10 gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
             <!-- First Card -->
             <div class="card glass">
-                <figure><img src="/images/others/latest1.png" alt="car!"/></figure>
+                <figure><img src="./images/others/latest1.png" alt="car!"/></figure>
                 <div class="card-body">
                   <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.?</p>
@@ -226,7 +226,7 @@
                 </figure>
                 <div class="card-body gap-5 items-center text-center">
                  
-                  <p>Slate helps you see how 
+                  <p>Slate helps you see how
                     many more days you need 
                     to work to reach your financial 
                     goal for the month and year.</p>
